2008-09-17  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: Fixed port match in purge_ipsec_spi()
	  when NAT-T enabled and trying to purge non NAT-T SAs.

2008-08-12  Yvan Vanhullebus  <vanhu@netasq.com>
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Remove ph1handler if we received an invalid
	  first exchange from initiator.

---------------------------------------------

	0.7.1 released


2008-07-23  Timo Teras  <timo.teras@iki.fi>
	* src/libipsec/Makefile.am
	  src/racoon/Makefile.am
	  src/setkey/Makefile.am : do not remove flex/bison generated files
	  in distclean, also add the generated header file as BUILT_SOURCES
	  and use the standard autotools rule for generating them
	* src/racoon/Makefile.am : do not use GNU make specific extension 

2008-07-22  Yvan Vanhullebus  <vanhu@netasq.com>
	From Kohki Ohhira <ohhira@src.ricoh.co.jp>:
	* src/racoon/proposal.c: fixed some memory leaks, when malloc
	  fails or when peer sends invalid proposals.

2008-07-21  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/cfparse.y : do not set default gss id if xauth is used

2008-07-14  Matthew Grooms
	* src/racoon/isakmp_cfg.c : fix hybrid enabled builds

2008-07-14  Matthew Grooms
	* src/racoon/crypto_openssl.c
	  src/racoon/eaytest.c
	  src/racoon/misc.c
	  src/racoon/misc.h
	  src/racoon/racoonctl.c : fix conflict with freebsd8 hexdump()

2008-07-11  Timo Teras  <timo.teras@iki.fi>
	Track:259, original patch from Atis Elsts <the.kfx@gmail.com>:
	* src/racoon/isakmp.c, src/racoon/isakmp_inf.c: fix double memfree
	  by changing copy_ph1addresses() to not free ph1 on failure
	  and remove misplaced remph1() calls causing memory corruption

2008-07-09  Timo Teras  <timo.teras@iki.fi>
	Track:269, from Chong Peng <chongpeng@gmail.com>:
	* src/racoon/cfparse.y: remove parser initialization causing
	  fd leak from cfreparse() since cfparse() initializes it anyway

2008-07-02  Yvan Vanhullebus  <vanhu@netasq.com>